@@ -435,10 +435,18 @@
    <copyField source="manu" dest="text"/>
    <copyField source="features" dest="text"/>
    <copyField source="includes" dest="text"/>
+	
+ <!-- Above, multiple source fields are copied to the [text] field. 
+	  Another way to map multiple source fields to the same 
+	  destination field is to use the dynamic field syntax. 
+	  copyField also supports a maxChars to copy setting.  -->
+	   
+ <!-- <copyField source="*" dest="text" maxChars="3000"/> -->
+  
 
    <copyField source="manu" dest="manu_exact"/>
 
-  <copyField source="name" dest="spell"/>
+   <copyField source="name" dest="spell"/>
 
  <!-- Similarity is the scoring routine for each document vs. a query.
       A custom similarity may be specified here, but the default is fine
